# abrite-pos

./: CMakeLists.txt  ClientSelectionWindow.cpp  ClientSelectionWindow.h  Customer.h  CustomerDialog.cpp  CustomerDialog.h  DropoffWindow.cpp  DropoffWindow.h  LoginWindow.cpp  LoginWindow.h  MongoManager.cpp  MongoManagerTest.cpp  PickupWindow.cpp  README.md  Store.cpp  Store.h  StoreSelectionWindow.cpp  StoreSelectionWindow.h  Stylesheets.h  User.cpp  User.h  WindowController.cpp  WindowController.h  create_udev_rule_for_printer.sh  prices.ini  users.ini
include/: Address.h  ClientSelectionWindow.h  Customer.h  DropoffWindow.h  LoginWindow.h  MongoManager.h  Order.h  PaymentDialog.h  PickupWindow.h  ReceiptPrinter.h  Session.h  StoreSelectionWindow.h  User.h
src/: ClientSelectionWindow.cpp  Customer.cpp  DropoffWindow.cpp  LoginWindow.cpp  MongoManager.cpp  PaymentDialog.cpp  PickupWindow.cpp  ReceiptPrinter.cpp  StoreSelectionWindow.cpp  User.cpp  WindowController.cpp  main.cpp
test/: MongoManagerTest.cpp
